--- a/public/usLogIn.html
+++ b/public/usLogIn.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/static/uslogin.js" ></script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Un Protected SQL Login</title>
 </head>
 <body>
 <form method="get" id ="login" class="d-flex justify-content-center flex-column ">
