--- a/public/protectedSQL/login.html
+++ b/public/protectedSQL/login.html
@@ -20,11 +20,11 @@
     <input type="password" id="password"  class="form-control mb-3 col-12 col-md-6" name="password" placeholder="Password" required>
     <input type="submit" class="btn btn-primary col-6 col-3" value="Log In">
 </form>
-<div id="response" class=" p-3 mt-4"></div>
+<div id="response" class="badge p-3 mt-4"></div>
 </div>
 </body>
 <script>window.onload = () => {
-    const url = 'http://localhost:3000';
+    const url = 'https://cyber-attacks-sql-injection.onrender.com';
     document.getElementById('login').onsubmit = (event) => {
         event.preventDefault();
         const username = document.getElementById('username').value;
@@ -50,7 +50,7 @@
                 console.error('Error:', error);
                 const response = document.getElementById('response');
                 response.innerHTML = 'An error occurred while processing your request.';
-                response.classList.add("text-bg-danger","badge");
+                response.classList.add("text-bg-danger");
             });
 
     }
