--- a/public/unprotectedSQL/logIn.html
+++ b/public/unprotectedSQL/logIn.html
@@ -19,7 +19,7 @@
         <input type="password" id="password"  class="form-control mb-3 col-12 col-md-6" name="password" placeholder="Password" required>
         <input type="submit" class="btn btn-primary col-6 col-3" value="Log In">
     </form>
-    <div id="response" class=" p-3 mt-4"></div>
+    <div id="response" class="badge p-3 mt-4"></div>
 </div>
 </body>
 </html>
