--- a/public/unprotectedSQL/logIn.html
+++ b/public/unprotectedSQL/logIn.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/unprotectedSQL/login.js" ></script>
+<!--    <script src="/unprotectedSQL/login.js" ></script>-->
     <meta charset="UTF-8">
     <title>Un Protected SQL Login</title>
 </head>
@@ -21,5 +21,38 @@
     </form>
     <div id="response" class="badge p-3 mt-4"></div>
 </div>
+<script>
+    window.onload = () => {
+        const url = 'https://cyber-attacks-sql-injection.onrender.com';
+        document.getElementById('login').onsubmit = (event) => {
+            event.preventDefault();
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            fetch(`${url}/unprotectedSQL/login?username=${username}&password=${password}`)
+                .then((res) => {
+                    if (res.status === 200) {
+                        window.location.href = `prod.html`;
+                    } else {
+                        return res.json();
+                    }
+                })
+                .then((data) => {
+                    if (data?.message) {
+                        const response = document.getElementById('response');
+                        response.innerHTML = data.message;
+                        response.classList.add("text-bg-danger");
+                    }
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                    const response = document.getElementById('response');
+                    response.innerHTML = 'An error occurred while processing your request.';
+                    response.classList.add("text-bg-danger");
+                });
+
+        }
+    }
+</script>
 </body>
 </html>
