--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             <a href="/protectedNoSQL/login.html" class="btn btn-success col-6">Protected No SQL</a>
         </div>
         <div class="col-12 col-md-6 d-flex justify-content-center mt-1">
-            <a href="/protectedNoSQL/login.html" class="btn btn-danger col-6">UN-Protected No SQL</a>
+            <a href="/unprotectedNoSQL/login.html" class="btn btn-danger col-6">UN-Protected No SQL</a>
         </div>
     </div>
 </div>
