--- a/public/unprotectedNoSQL/login.html
+++ b/public/unprotectedNoSQL/login.html
@@ -22,7 +22,8 @@
 </div>
 <script>
     window.onload = () => {
-        const url = 'https://cyber-attacks-sql-injection.onrender.com';
+        // const url = 'https://cyber-attacks-sql-injection.onrender.com';
+        const url = 'http://localhost:3000';
         document.getElementById('login').onsubmit = (event) => {
             event.preventDefault();
             const username = document.getElementById('username').value;
