--- a/public/protectedSQL/login.html
+++ b/public/protectedSQL/login.html
@@ -24,9 +24,8 @@
 </div>
 </body>
 <script>window.onload = () => {
-    // const url = 'https://cyber-attacks-sql-injection.onrender.com';
-
-    const url = 'http://localhost:3000';
+    const url = 'https://cyber-attacks-sql-injection.onrender.com';
+    // const url = 'http://localhost:3000';
     document.getElementById('login').onsubmit = (event) => {
         event.preventDefault();
         const username = document.getElementById('username').value;
